DASAParser.py
# Generated from DASA.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class DASAParser ( Parser ):

    grammarFileName = "DASA.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'define'", "'func'", "'main'", "'Int'", 
                     "'Float'", "'Bool'", "'String'", "'print'", "'input'", 
                     "'isNull'", "'toInt'", "'toFloat'", "'toString'", "'size'", 
                     "'plot'", "'describe'", "'regression'", "'cluster'", 
                     "'return'", "'while'", "'if'", "'else'", "'Null'", 
                     "':'", "';'", "','", "'{'", "'}'", "'('", "')'", "'['", 
                     "']'", "'!='", "'=='", "'='", "'>='", "'<='", "'>'", 
                     "'<'", "'+'", "'-'", "'*'", "'/'", "'!'", "'%'", "'&&'", 
                     "'||'" ]

    symbolicNames = [ "<INVALID>", "DEFINE", "FUNC", "MAIN", "TINT", "TFLOAT", 
                      "TBOOL", "TSTRING", "PRINT", "INPUT", "ISNULL", "TOINT", 
                      "TOFLOAT", "TOSTRING", "SIZE", "PLOT", "DESCRIBE", 
                      "REGRESSION", "CLUSTER", "RETURN", "WHILE", "IF", 
                      "ELSE", "NULL", "COLON", "SCOLON", "COMMA", "LCURLY", 
                      "RCURLY", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
                      "DIFF", "EQUALS", "ASSIGN", "GREATEQ", "LESSEQ", "GREAT", 
                      "LESS", "PLUS", "MINUS", "MULT", "DIVIDE", "NOT", 
                      "MOD", "AND", "OR", "IGNORE", "LINE_COMMENT", "COMMENT", 
                      "CSTRING", "CFLOAT", "CINT", "CBOOL", "ID" ]

    RULE_programa = 0
    RULE_prog1 = 1
    RULE_prog2 = 2
    RULE_prog3 = 3
    RULE_main = 4
    RULE_main1 = 5
    RULE_main2 = 6
    RULE_metodos = 7
    RULE_met1 = 8
    RULE_met2 = 9
    RULE_met3 = 10
    RULE_met4 = 11
    RULE_met5 = 12
    RULE_params = 13
    RULE_vars_st = 14
    RULE_vars1 = 15
    RULE_vars2 = 16
    RULE_vars3 = 17
    RULE_vars4 = 18
    RULE_vars5 = 19
    RULE_vars6 = 20
    RULE_estatuto = 21
    RULE_asignacion = 22
    RULE_asig1 = 23
    RULE_asig2 = 24
    RULE_durante = 25
    RULE_duro1 = 26
    RULE_condicion = 27
    RULE_con1 = 28
    RULE_con2 = 29
    RULE_lectura = 30
    RULE_lec1 = 31
    RULE_lec2 = 32
    RULE_arreglo = 33
    RULE_arr1 = 34
    RULE_arr2 = 35
    RULE_arr3 = 36
    RULE_arr4 = 37
    RULE_arr5 = 38
    RULE_arr6 = 39
    RULE_arr7 = 40
    RULE_cte = 41
    RULE_tipo = 42
    RULE_bloque = 43
    RULE_bloque1 = 44
    RULE_escritura = 45
    RULE_escr1 = 46
    RULE_escr2 = 47
    RULE_estdesc = 48
    RULE_dibujar = 49
    RULE_regresion = 50
    RULE_reg1 = 51
    RULE_clustering = 52
    RULE_funcion = 53
    RULE_func1 = 54
    RULE_func2 = 55
    RULE_regresa = 56
    RULE_expresion = 57
    RULE_expres1 = 58
    RULE_expres2 = 59
    RULE_comp = 60
    RULE_comp1 = 61
    RULE_comp2 = 62
    RULE_exp = 63
    RULE_exp1 = 64
    RULE_exp2 = 65
    RULE_termino = 66
    RULE_term1 = 67
    RULE_term2 = 68
    RULE_factor = 69
    RULE_fact1 = 70
    RULE_fact2 = 71
    RULE_fact3 = 72
    RULE_valor = 73
    RULE_valor1 = 74
    RULE_valor2 = 75
    RULE_vacio = 76
    RULE_castint = 77
    RULE_castfloat = 78
    RULE_caststring = 79
    RULE_tamano = 80

    ruleNames =  [ "programa", "prog1", "prog2", "prog3", "main", "main1", 
                   "main2", "metodos", "met1", "met2", "met3", "met4", "met5", 
                   "params", "vars_st", "vars1", "vars2", "vars3", "vars4", 
                   "vars5", "vars6", "estatuto", "asignacion", "asig1", 
                   "asig2", "durante", "duro1", "condicion", "con1", "con2", 
                   "lectura", "lec1", "lec2", "arreglo", "arr1", "arr2", 
                   "arr3", "arr4", "arr5", "arr6", "arr7", "cte", "tipo", 
                   "bloque", "bloque1", "escritura", "escr1", "escr2", "estdesc", 
                   "dibujar", "regresion", "reg1", "clustering", "funcion", 
                   "func1", "func2", "regresa", "expresion", "expres1", 
                   "expres2", "comp", "comp1", "comp2", "exp", "exp1", "exp2", 
                   "termino", "term1", "term2", "factor", "fact1", "fact2", 
                   "fact3", "valor", "valor1", "valor2", "vacio", "castint", 
                   "castfloat", "caststring", "tamano" ]

    EOF = Token.EOF
    DEFINE=1
    FUNC=2
    MAIN=3
    TINT=4
    TFLOAT=5
    TBOOL=6
    TSTRING=7
    PRINT=8
    INPUT=9
    ISNULL=10
    TOINT=11
    TOFLOAT=12
    TOSTRING=13
    SIZE=14
    PLOT=15
    DESCRIBE=16
    REGRESSION=17
    CLUSTER=18
    RETURN=19
    WHILE=20
    IF=21
    ELSE=22
    NULL=23
    COLON=24
    SCOLON=25
    COMMA=26
    LCURLY=27
    RCURLY=28
    LPAREN=29
    RPAREN=30
    LBRACK=31
    RBRACK=32
    DIFF=33
    EQUALS=34
    ASSIGN=35
    GREATEQ=36
    LESSEQ=37
    GREAT=38
    LESS=39
    PLUS=40
    MINUS=41
    MULT=42
    DIVIDE=43
    NOT=44
    MOD=45
    AND=46
    OR=47
    IGNORE=48
    LINE_COMMENT=49
    COMMENT=50
    CSTRING=51
    CFLOAT=52
    CINT=53
    CBOOL=54
    ID=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prog1(self):
            return self.getTypedRuleContext(DASAParser.Prog1Context,0)


        def prog3(self):
            return self.getTypedRuleContext(DASAParser.Prog3Context,0)


        def prog2(self):
            return self.getTypedRuleContext(DASAParser.Prog2Context,0)


        def main(self):
            return self.getTypedRuleContext(DASAParser.MainContext,0)


        def getRuleIndex(self):
            return DASAParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = DASAParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.prog1()
            self.state = 163
            self.prog3()
            self.state = 164
            self.prog2()
            self.state = 165
            self.main()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prog1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_st(self):
            return self.getTypedRuleContext(DASAParser.Vars_stContext,0)


        def prog1(self):
            return self.getTypedRuleContext(DASAParser.Prog1Context,0)


        def getRuleIndex(self):
            return DASAParser.RULE_prog1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg1" ):
                listener.enterProg1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg1" ):
                listener.exitProg1(self)




    def prog1(self):

        localctx = DASAParser.Prog1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prog1)
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DASAParser.DEFINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.vars_st()
                self.state = 168
                self.prog1()
                pass
            elif token in [DASAParser.FUNC, DASAParser.MAIN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prog2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def metodos(self):
            return self.getTypedRuleContext(DASAParser.MetodosContext,0)


        def prog2(self):
            return self.getTypedRuleContext(DASAParser.Prog2Context,0)


        def getRuleIndex(self):
            return DASAParser.RULE_prog2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg2" ):
                listener.enterProg2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg2" ):
                listener.exitProg2(self)




    def prog2(self):

        localctx = DASAParser.Prog2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_prog2)
        try:
            self.state = 177
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DASAParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.metodos()
                self.state = 174
                self.prog2()
                pass
            elif token in [DASAParser.MAIN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prog3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DASAParser.RULE_prog3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg3" ):
                listener.enterProg3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg3" ):
                listener.exitProg3(self)




    def prog3(self):

        localctx = DASAParser.Prog3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_prog3)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN(self):
            return self.getToken(DASAParser.MAIN, 0)

        def LPAREN(self):
            return self.getToken(DASAParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(DASAParser.RPAREN, 0)

        def LCURLY(self):
            return self.getToken(DASAParser.LCURLY, 0)

        def main1(self):
            return self.getTypedRuleContext(DASAParser.Main1Context,0)


        def main2(self):
            return self.getTypedRuleContext(DASAParser.Main2Context,0)


        def RCURLY(self):
            return self.getToken(DASAParser.RCURLY, 0)

        def getRuleIndex(self):
            return DASAParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = DASAParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(DASAParser.MAIN)
            self.state = 182
            self.match(DASAParser.LPAREN)
            self.state = 183
            self.match(DASAParser.RPAREN)
            self.state = 184
            self.match(DASAParser.LCURLY)
            self.state = 185
            self.main1()
            self.state = 186
            self.main2()
            self.state = 187
            self.match(DASAParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_st(self):
            return self.getTypedRuleContext(DASAParser.Vars_stContext,0)


        def main1(self):
            return self.getTypedRuleContext(DASAParser.Main1Context,0)


        def getRuleIndex(self):
            return DASAParser.RULE_main1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain1" ):
                listener.enterMain1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain1" ):
                listener.exitMain1(self)




    def main1(self):

        localctx = DASAParser.Main1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_main1)
        try:
            self.state = 193
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DASAParser.DEFINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 189
                self.vars_st()
                self.state = 190
                self.main1()
                pass
            elif token in [DASAParser.PRINT, DASAParser.INPUT, DASAParser.PLOT, DASAParser.DESCRIBE, DASAParser.REGRESSION, DASAParser.CLUSTER, DASAParser.RETURN, DASAParser.WHILE, DASAParser.IF, DASAParser.RCURLY, DASAParser.ID]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estatuto(self):
            return self.getTypedRuleContext(DASAParser.EstatutoContext,0)


        def main2(self):
            return self.getTypedRuleContext(DASAParser.Main2Context,0)


        def getRuleIndex(self):
            return DASAParser.RULE_main2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain2" ):
                listener.enterMain2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain2" ):
                listener.exitMain2(self)




    def main2(self):

        localctx = DASAParser.Main2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_main2)
        try:
            self.state = 199
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DASAParser.PRINT, DASAParser.INPUT, DASAParser.PLOT, DASAParser.DESCRIBE, DASAParser.REGRESSION, DASAParser.CLUSTER, DASAParser.RETURN, DASAParser.WHILE, DASAParser.IF, DASAParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.estatuto()
                self.state = 196
                self.main2()
                pass
            elif token in [DASAParser.RCURLY]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetodosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(DASAParser.FUNC, 0)

        def ID(self):
            return self.getToken(DASAParser.ID, 0)

        def LPAREN(self):
            return self.getToken(DASAParser.LPAREN, 0)

        def met1(self):
            return self.getTypedRuleContext(DASAParser.Met1Context,0)


        def RPAREN(self):
            return self.getToken(DASAParser.RPAREN, 0)

        def met2(self):
            return self.getTypedRuleContext(DASAParser.Met2Context,0)


        def LCURLY(self):
            return self.getToken(DASAParser.LCURLY, 0)

        def met3(self):
            return self.getTypedRuleContext(DASAParser.Met3Context,0)


        def met4(self):
            return self.getTypedRuleContext(DASAParser.Met4Context,0)


        def RCURLY(self):
            return self.getToken(DASAParser.RCURLY, 0)

        def getRuleIndex(self):
            return DASAParser.RULE_metodos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetodos" ):
                listener.enterMetodos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetodos" ):
                listener.exitMetodos(self)




    def metodos(self):

        localctx = DASAParser.MetodosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_metodos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 201
            self.match(DASAParser.FUNC)
            self.state = 202
            self.match(DASAParser.ID)
            self.state = 203
            self.match(DASAParser.LPAREN)
            self.state = 204
            self.met1()
            self.state = 205
            self.match(DASAParser.RPAREN)
            self.state = 206
            self.met2()
            self.state = 207
            self.match(DASAParser.LCURLY)
            self.state = 208
            self.met3()
            self.state = 209
            self.met4()
            self.state = 210
            self.match(DASAParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Met1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params(self):
            return self.getTypedRuleContext(DASAParser.ParamsContext,0)


        def met5(self):
            return self.getTypedRuleContext(DASAParser.Met5Context,0)


        def getRuleIndex(self):
            return DASAParser.RULE_met1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMet1" ):
                listener.enterMet1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMet1" ):
                listener.exitMet1(self)




    def met1(self):

        localctx = DASAParser.Met1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_met1)
        try:
            self.state = 216
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DASAParser.TINT, DASAParser.TFLOAT, DASAParser.TBOOL, DASAParser.TSTRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 212
                self.params()
                self.state = 213
                self.met5()
                pass
            elif token in [DASAParser.RPAREN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Met2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(DASAParser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(DASAParser.TipoContext,0)


        def getRuleIndex(self):
            return DASAParser.RULE_met2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMet2" ):
                listener.enterMet2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMet2" ):
                listener.exitMet2(self)




    def met2(self):

        localctx = DASAParser.Met2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_met2)
        try:
            self.state = 221
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DASAParser.COLON]:
                self.enterOuterAlt(localctx, 1)
                self.state = 218
                self.match(DASAParser.COLON)
                self.state = 219
                self.tipo()
                pass
            elif token in [DASAParser.LCURLY]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Met3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_st(self):
            return self.getTypedRuleContext(DASAParser.Vars_stContext,0)


        def met3(self):
            return self.getTypedRuleContext(DASAParser.Met3Context,0)


        def getRuleIndex(self):
            return DASAParser.RULE_met3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMet3" ):
                listener.enterMet3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMet3" ):
                listener.exitMet3(self)




    def met3(self):

        localctx = DASAParser.Met3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_met3)
        try:
            self.state = 227
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DASAParser.DEFINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 223
                self.vars_st()
                self.state = 224
                self.met3()
                pass
            elif token in [DASAParser.PRINT, DASAParser.INPUT, DASAParser.PLOT, DASAParser.DESCRIBE, DASAParser.REGRESSION, DASAParser.CLUSTER, DASAParser.RETURN, DASAParser.WHILE, DASAParser.IF, DASAParser.RCURLY, DASAParser.ID]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Met4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estatuto(self):
            return self.getTypedRuleContext(DASAParser.EstatutoContext,0)


        def met4(self):
            return self.getTypedRuleContext(DASAParser.Met4Context,0)


        def getRuleIndex(self):
            return DASAParser.RULE_met4

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMet4" ):
                listener.enterMet4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMet4" ):
                listener.exitMet4(self)




    def met4(self):

        localctx = DASAParser.Met4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_met4)
        try:
            self.state = 233
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DASAParser.PRINT, DASAParser.INPUT, DASAParser.PLOT, DASAParser.DESCRIBE, DASAParser.REGRESSION, DASAParser.CLUSTER, DASAParser.RETURN, DASAParser.WHILE, DASAParser.IF, DASAParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 229
                self.estatuto()
                self.state = 230
                self.met4()
                pass
            elif token in [DASAParser.RCURLY]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Met5Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(DASAParser.COMMA, 0)

        def params(self):
            return self.getTypedRuleContext(DASAParser.ParamsContext,0)


        def met5(self):
            return self.getTypedRuleContext(DASAParser.Met5Context,0)


        def getRuleIndex(self):
            return DASAParser.RULE_met5

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMet5" ):
                listener.enterMet5(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMet5" ):
                listener.exitMet5(self)




    def met5(self):

        localctx = DASAParser.Met5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_met5)
        try:
            self.state = 240
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DASAParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 235
                self.match(DASAParser.COMMA)
                self.state = 236
                self.params()
                self.state = 237
                self.met5()
                pass
            elif token in [DASAParser.RPAREN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(DASAParser.TipoContext,0)


        def COLON(self):
            return self.getToken(DASAParser.COLON, 0)

        def ID(self):
            return self.getToken(DASAParser.ID, 0)

        def getRuleIndex(self):
            return DASAParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = DASAParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_params)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 242
            self.tipo()
            self.state = 243
            self.match(DASAParser.COLON)
            self.state = 244
            self.match(DASAParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_stContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE(self):
            return self.getToken(DASAParser.DEFINE, 0)

        def tipo(self):
            return self.getTypedRuleContext(DASAParser.TipoContext,0)


        def vars1(self):
            return self.getTypedRuleContext(DASAParser.Vars1Context,0)


        def COLON(self):
            return self.getToken(DASAParser.COLON, 0)

        def vars3(self):
            return self.getTypedRuleContext(DASAParser.Vars3Context,0)


        def SCOLON(self):
            return self.getToken(DASAParser.SCOLON, 0)

        def getRuleIndex(self):
            return DASAParser.RULE_vars_st
